2002-11-17  Daniel Morgan <danmorg@sc.rr.com>

	* pango/Scale.cs: added file containing constants
	for text widgets needing Pango Scale Attribute

2002-11-13  Vladimir Vukicevic  <vladimir@pobox.com>

	* gtk/CanvasItem.custom: use base() to set Raw in constructor, so
	that the ref counting semantics get correctly set up

2002-11-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* glade/XML.custom: converted from Latin1 to UTF8 to make the generator
	go on.

2002-11-10  Vladimir Vukicevic  <vladimir@pobox.com>

	* glib/Object.cs: add needs_ref boolean that controls whether
	we need to ref this object once we have a pointer to it or not.
	By default this is set to true -- constructors and other functions
	where we do own the object need to set this to false before setting
	the "Raw" property.  Also added Unref and RefCount methods.

	* glue/object.c, glue/type.c: some utility functions for
	refcounting support

	* gdk/Pixbuf.custom: manually wrap a few functions so that
	the refcount ends up being correct at the end (need an extra Unref)

	* api/gdk-api.xml, sources/Gdk.metadata: metadata updates for
	hiding manually-wrapped Pixbuf stuff

2002-11-10  Vladimir Vukicevic  <vladimir@pobox.com>

	* generator/StructBase.cs: create a Zero static member for
	use when the IntPtr is NULL.

	* generator/SignalHandler.cs, generator/CallbackGen.cs: removed
	call to Initialize for structs

	* gtk/Clipboard.custom, gtk/ClipboardClearFunc.cs,
	gtk/ClipboardGetFunc.cs,
	gtk/GtkSharp.GtkClipboardClearFuncNative.cs,
	gtk/GtkSharp.ClipboardGetFuncNative.cs, SelectionData.custom:
	Hand-wrapped selection handling stuff, along with relevant
	signals and the like.
	
	* gnome/voidObjectAffineSVPintSignal.cs: removed Initialize
	for hand-wrapped signal

	* sample/GnomeHelloWorld.cs, sample/Size.cs: compare against
	.Zero instead of using IsNull

	* api/gtk-api.xml, sources/Gtk.metadata: metadata updates for
	hiding some manually-wrapped stuff
