@@ -1,3 +1,10 @@
+2002-11-17  Radek Doulik  <rodo@ximian.com>
+
+	* glib/Value.cs: cast Typefundamentals.* to uint (GType is
+	unsigned int), fix Value (GLib.Object) - use new GetGType method
+
+	* glib/Object.cs: new GetGType method, returns _obj GType
+
 2002-11-17  Daniel Morgan <danmorg@sc.rr.com>
 
 	* pango/Scale.cs: added file containing constants
